add cardList Componets

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,26 @@
-<header>
-    <h1>Header</h1>
-</header>
-<router-outlet></router-outlet>
+<div 
+    gdAreas="header header | content content | footer footer" 
+    gdGap="16px" 
+    gdRows="auto auto auto"
+    gdAreas.lt-md="header | content | footer"
+    gdRows.lt-md="auto auto auto auto"
+    >
+    <header gdArea="header">
+        Header
+    </header>
+
+    <main gdArea="content">
+        <div fxLayout="row">
+            <section class="grid_section">
+                <router-outlet></router-outlet>
+            </section>
+        </div>
+       
+    </main>
+    <footer dArea="footer">
+        <mat-toolbar color="primary">
+            <mat-toolbar-row>
+            </mat-toolbar-row>
+        </mat-toolbar>
+    </footer>
+</div>
