--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,48 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+@mixin breakpoint($point) {
+    @if $point == large {
+      @media only screen and (min-width: 1200px) {
+        @content;
+      }
+    } @else if $point == desktop {
+      @media only screen and (min-width: 992px) {
+        @content;
+      }
+    } @else if $point == tablet {
+      @media only screen and (min-width: 768px) {
+        @content;
+      }
+    } @else if $point == mobile {
+      @media only screen and (min-width: 576px) {
+        @content;
+      }
+    }
+  }
+  
+  @function calculateRem($size) {
+    $remSize: $size / 16px;
+    @return $remSize * 1rem;
+  }
+  
+  @mixin font-size($size) {
+    font-size: calculateRem($size);
+  }
+  
+  
+  .grid_section {
+    padding-left: 5%;
+    padding-right: 5%;
+    @include breakpoint(tablet) {
+      margin: calculateRem(10px) 0 calculateRem(15px);
+    }
+    @include breakpoint(desktop) {
+      margin: calculateRem(20px) 0;
+    }
+    @include breakpoint(large) {
+      margin: calculateRem(30px) 0;
+    }
+  }
+  
