--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     gdRows.lt-md="auto auto auto auto"
     >
     <header gdArea="header">
-        Header
+        <game-header (GoPageCreate)="GoPageCreate($event)"></game-header>
     </header>
 
     <main gdArea="content">
