--- a/src/app/views/ui-components/header/header.component.html
+++ b/src/app/views/ui-components/header/header.component.html
@@ -1,1 +1,9 @@
-<p>header works!</p>
+
+<mat-toolbar color="primary">
+   
+    <span>My App</span>
+    <span class="example-spacer"></span>
+    <button (click)="goCreate($event)" mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+      <mat-icon>add</mat-icon>
+    </button>
+  </mat-toolbar>
