--- a/src/app/views/ui-components/form/form.component.html
+++ b/src/app/views/ui-components/form/form.component.html
@@ -1,19 +1,20 @@
 <div class="container"  novalidate>
-    <form [formGroup]="formGroup" class="form">
+    <form [formGroup]="formGroup" (ngSubmit)="onSubmit(formGroup.value)" class="form">
   
       <mat-form-field class="form-element">
-        <input matInput placeholder="Title" formControlName="title">
-        <mat-error>
-         
+        <input matInput placeholder="Titulo" formControlName="title">
+        <mat-error *ngIf="!formGroup.controls['title'].valid && formGroup.controls['title'].touched">
+          {{ getErrorTitle() }}
         </mat-error>
       </mat-form-field>
   
-      <!-- <mat-form-field class="form-element">
+       <mat-form-field class="form-element">
         <input matInput placeholder="Price" formControlName="price">
-        <mat-error>
+        <mat-error  *ngIf="!formGroup.controls['price'].valid && formGroup.controls['price'].touched">
+          {{ getErrorPrice() }}
         </mat-error>
       </mat-form-field>
-  
+  <!--
       <mat-form-field class="form-element">
         <input matInput placeholder="URL Image" formControlName="imageUrl">
         <mat-error>
