--- a/src/app/views/pages/games-detail-page/games-detail-page.component.html
+++ b/src/app/views/pages/games-detail-page/games-detail-page.component.html
@@ -1,3 +1,4 @@
-<p>games-detail-page works!</p>
+<h1>Detalle del Juego</h1>
 
-<h1>My ID es: {{id}}</h1>
+<game-form  [edit]="false" [detail]="false" (post)="post($event)"></game-form>
+
