add form page detail

--- a/src/app/views/pages/games-detail-page/games-detail-page.component.html
+++ b/src/app/views/pages/games-detail-page/games-detail-page.component.html
@@ -1,4 +1,4 @@
 <h1>Detalle del Juego</h1>
 
-<game-form  [edit]="false" [detail]="false" (post)="post($event)"></game-form>
+<game-form [game]="game" [edit]="true" [detail]="true"></game-form>
 
