add form to page update

--- a/src/app/views/pages/games-update-page/games-update-page.component.html
+++ b/src/app/views/pages/games-update-page/games-update-page.component.html
@@ -1,1 +1,3 @@
-<p>games-update-page works!</p>
+<h1>Actualizacion de Juego</h1>
+<game-form [game]="game" [edit]="true" [detail]="false"></game-form>
+
