--- a/src/app/views/ui-components/card-list/card-list.component.html
+++ b/src/app/views/ui-components/card-list/card-list.component.html
@@ -1,18 +1,19 @@
 <div class="content" fxLayout="row wrap" fxLayoutGap="16px grid">
-    <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let num of [1,2,3,4,5,6,7,8]">
+    <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let game of games | async ">
       <mat-card class="mat-elevation-z4" >
         <mat-card-header>
-          <mat-card-title>Mountains {{num}}</mat-card-title>
+          <mat-card-title>{{ game.title}}</mat-card-title>
         </mat-card-header>
-        <img mat-card-image src="https://images-na.ssl-images-amazon.com/images/I/81%2Bj%2BsmeJGL._SL1500_.jpg">
+        <img mat-card-image [src]="game.imageUrl">
         <mat-card-content>
           <p>
-            The Himalayas is a mountain range in Asia.
+            {{ game.description }}
           </p>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
+          <button mat-button (click)="detail(game._id)">Detalle</button>
+          <button mat-button (click)="edit(game._id)">Editar</button>
+          <button mat-button (click)="delete(game._id)">Eliminar</button>
         </mat-card-actions>
       </mat-card>
     </div>
