--- a/src/app/views/pages/game-main-page/game-main-page.component.html
+++ b/src/app/views/pages/game-main-page/game-main-page.component.html
@@ -1,3 +1,3 @@
 <h1>Mis Juegos</h1>
 
-<game-card-list [games]="games"></game-card-list>
+<game-card-list [games]="games" (deleteGame)="delete($event)" (editGame)="edit($event)" (detailGame)="detail($event)"></game-card-list>
